# levmar

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  plans.md
cmake/: levmarConfig.cmake.in
conformance/benchmark_corpus/exp_sum_m1024_n64/: data.csv  jacobian_benchmark.csv  meta.txt  params.csv  residuals_benchmark.csv
conformance/benchmark_corpus/exp_sum_m512_n32/: data.csv  jacobian_benchmark.csv  meta.txt  params.csv  residuals_benchmark.csv
conformance/benchmark_corpus/linear_dense_m10000_n4/: data.csv  jacobian_benchmark.csv  meta.txt  params.csv  residuals_benchmark.csv
conformance/benchmark_corpus/linear_dense_m1000_n4/: data.csv  jacobian_benchmark.csv  meta.txt  residuals_benchmark.csv
conformance/benchmark_corpus/rational_dense_m32_n32/: data.csv  jacobian_benchmark.csv  meta.txt  params.csv  residuals_benchmark.csv
conformance/benchmark_corpus/rational_dense_m64_n64/: data.csv  jacobian_benchmark.csv  meta.txt  params.csv  residuals_benchmark.csv
conformance/nist_nls/: cpp_runner.cpp  cpp_runner_results.csv  output.csv
conformance/nist_nls/corpus/bennett5/: data.csv  jacobian_certified.csv  jacobian_start1.csv  jacobian_start2.csv  meta.txt  params.csv  residuals_certified.csv  residuals_start1.csv  residuals_start2.csv
conformance/nist_nls/corpus/boxbod/: data.csv  jacobian_certified.csv  jacobian_start1.csv  jacobian_start2.csv  meta.txt  params.csv  residuals_certified.csv  residuals_start1.csv  residuals_start2.csv
conformance/nist_nls/corpus/chwirut1/: data.csv  jacobian_certified.csv  jacobian_start1.csv  jacobian_start2.csv  meta.txt  params.csv  residuals_certified.csv  residuals_start1.csv  residuals_start2.csv
conformance/nist_nls/generator/: README.md  datasets.py  format.py  generate.py  models.py  validate.py
cpp/: lm.h
levmar/: lm.h
src/: lm.h
(+209 files in other folders)
